20th July 2010
--------------

Implemented constant-time string comparison, and applied it to the HMAC-SHA1 and PlainText signature methods.

See here: http://groups.google.com/group/oauth/browse_thread/thread/f3e9ec6c3aa0fe1a for more details.

16th July 2010
--------------

Moved code to github.
Split examples and code into seperate git repos.
Shifted all tests over to run with XUnit 1.6
Upgraded solution to Visual Studio 2010
Pulled additions/changes from the Xero API DevDefined.OAuth fork into codebase.

31st July 2009
--------------

Fixed bug that allowed oauth_token_secret to be transmitted from the consumer to the provider.
Fixed bug that meant provider would not work with plain text signature method, unless oauth_token_secret was sent by the client.
Fixed the ExampleConsumerSite and ExampleProviderSite to implement a working OAuth 1.0a exchange of tokens etc.
Apply General code cleanup.

30th July 2009
--------------

Moved the "basic" storage implementation into the core library.
Updated consumer implementation to support OAuth 1.0a.
Updated the provider implementation to support OAuth 1.0a.

Note: Provider example still needs updating to be 1.0a compliant.

17th November 2008
------------------

Added WCF code and example channel from Pablo Cibraro (http://weblogs.asp.net/cibrax/).
Organised code into 2 solution folders - core implementation - and examples.
Added changes file to track overall logical changes.
Moved MIT license into code region, so it'll collapse.
Signed the core assembly (can't sign WCF at the moment, because Microsoft.ServiceModel.Web.dll is unsigned).
